--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,14 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.egidijusgecius.refactoringpractice.andoid.MainActivity">
+
+
+
+    android:layout_height="match_parent">
+
+    <!-- add tools & apps namespaces -->
+
 
     <TextView
         android:layout_width="wrap_content"
